SEO en nosotros.html

--- a/secciones/blog.html
+++ b/secciones/blog.html
@@ -111,7 +111,7 @@
                             allowfullscreen></iframe>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div id="especialMama" class="col-md-6 col-sm-12">
                     <h3>Práctica de ejercicio durante el embarazo</h3>
                     <p>
                         Durante la gestación, la mujer presenta variados cambios físicos y fisiológicos. El ejercicio
